# srtperf

./: .gitignore  .travis.yml  CMakeLists.txt  LICENSE  Makefile  README.md
src/: core.h  hexdump.c  main.c  srcs.mk
